[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[project]
name = "christianwhocodes"
version = "1.1.0rc1"
description = "My utility belt, just like Batman's utility belt but for code."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "christianwhocodes", email = "hey@christianwhocodes.space" },
]
requires-python = ">=3.12"
dependencies = ["pyperclip>=1.11.0", "rich>=14.2.0"]

[dependency-groups]
dev = ["tawala"]


[project.scripts]
christianwhocodes = "christianwhocodes.cli:main"

[project.urls]
homepage = "https://github.com/christianwhocodes/dev#readme"
repository = "https://github.com/christianwhocodes/dev"
issues = "https://github.com/christianwhocodes/dev/issues"

[tool.uv.sources]
tawala = { git = "https://github.com/tawalabora/tawala.git" }

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
